fixed images gallery on mobile and improved desktop styles

--- a/ui2022/src/app/util/common-components/lightbox-gallery/lightbox-gallery.component.scss
+++ b/ui2022/src/app/util/common-components/lightbox-gallery/lightbox-gallery.component.scss
@@ -24,7 +24,16 @@
 
 .slideImage {
   max-height: 100vh;
-  height: 100%;
+  height: auto;
+}
+
+@media only screen and (min-width: 1440px) {
+  .slideImage {
+    max-height: 100vh;
+    height: 100%;
+    max-width: initial;
+    overflow: hidden;
+  }
 }
 
 /* The Close Button */
